--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
     "postcss": "^8.5.6",
+    "prisma": "^7.2.0",
     "tailwindcss": "^3.4.19",
     "typescript": "^5"
   }
