--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@uploadthing/react": "^7.3.3",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.560.0",
+    "mixpanel": "^0.19.1",
+    "mixpanel-browser": "^2.73.0",
     "next": "^16.1.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/mixpanel": "^2.14.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
